UnaryExpression, ArithmeticUnaryExpression

2009-08-20
WhileCommand
ForEachCommand
BindingEnvironment with parent

2009-08-23
CompareExpression
AndExpression, OrExpression, NotExpression
ComparisonOperator
ForCommand

2009-08-24
Function
ICallable
BindingEnvironment.SetLocalValue

2009-08-25
FunctionStatus, Machine.CurrentFunctionStatus
ReturnCommand
Function first test
InvokeExpression wo/test

2009-08-26
ICallable, Function tests
InvokeExpression tests

2009-08-27
AjSharp
Token, Lexer, Parser w/Tests
AjSharp.Tests

2009-08-29
if, if/else, return command in Parser w/Tests
foreach, while commands in Parser w/Tests
{ } Composite command in Parser w/Tests
function parsing
InvokeCommand
DefineFunctionCommand
PrintSubroutine
PrintLineSubroutine
AjSharp.Console

2009-08-30
DotExpression, NewExpression w/tests
TypeUtilities w/tests
dot expression support in Parser
Machine.Environment, Machine.Current w/tests
IObject, DynamicObject first version w/tests
PrimitiveTests
Move ICallable from AjLanguage.Commands to AjLanguage.Language
new support in Parser w/tests
ObjectUtilities w/tests
TypeUtilities.GetValue w/tests
FunctionExpression
SetCommand, ExpressionCommand
function expression in Parser
AjSharp.Primitives.IncludeSubroutine w/tests
EvaluationTests
Examples/SetNumbers.ajs
Examples/Factorial.ajs
Examples/Apply.ajs

2009-09-06
MultipleSetExpression w/test

2009-09-12
Support for new ... { prop = expr, ... } in Parser
Support for new { prop = expr, ... } as a DynamicObject
Invoke in IObject, DynamicObject
Refactoring BindingEnvironment to IBindingEnvironment
ObjectEnvironment w/tests
ObjectUtilites.IsNumber
concatenate using +
IClass
IClassicObject
DynamicClass w/tests
DynamicClassicObject
DefineClassCommand w/test
class Foo { ... } in parser and evaluation w/tests
new Foo() in evaluation w/tests
new { } in parser and evaluation w/tests

2009-09-13
IncrementOperator
IncrementExpression w/tests
ExpressionUtilities
Refactoring SetCommand to use ExpressionUtilities.SetValue